# sumzle-hpc-solver

./: .gitignore  0001-fix-resolve-JSON-deserialization-mismatch-between-fr.patch  BENCHMARKS.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  pr-validation.yml
benches/: benchmark.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  types.ts  utils.ts
frontend/src/components/: EquationValidator.css  EquationValidator.tsx  ExpressionEvaluator.css  ExpressionEvaluator.tsx  GuessRow.css  GuessRow.test.tsx  GuessRow.tsx  Results.css  Results.test.tsx  Results.tsx  Tile.css  Tile.tsx
src/: constraints.rs  distributed.rs  evaluator.rs  lib.rs  main.rs  parallel.rs  server.rs  solver.rs  types.rs
tests/: consistency.rs
